# chess

./: .gitignore  CLAUDE.md  Makefile  README.md  middleware.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts  vercel.json
app/: Chess.tsx  globals.css  layout.tsx  page.tsx
app/api/game/: route.ts
app/api/stockfish/: route.ts
app/game/[gameId]/: error.tsx  page.tsx
backend/: Cargo.toml
backend/migrations/: 20240101000000_create_games.sql
backend/src/: error.rs  main.rs  protocol.rs  state.rs
backend/src/chess/: mod.rs
backend/src/db/: models.rs  pool.rs  queries.rs
backend/src/routes/: games.rs  mod.rs  ws.rs
components/: app-sidebar.tsx  audio-provider.tsx  chess-provider.tsx  chess.tsx  chessboard.tsx  create-game-button.tsx  images-provider.tsx  stockfish-provider.tsx  useImages.tsx  websocket-provider.tsx  winprobabilty.tsx
components/ui/: sidebar.tsx
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: main.tsx  routeTree.gen.ts
frontend/src/api/: client.ts  hooks.ts  types.ts
frontend/src/canvas/: boardRenderer.ts  coordinates.ts  interactionHandler.ts  types.ts
frontend/src/components/: ChessBoard.tsx  CreateGameButton.tsx  GameCard.tsx  GameInfo.tsx  MoveHistory.tsx
frontend/src/hooks/: useGameWebSocket.ts  (+1 more)
hooks/: use-mobile.tsx  useAudio.ts  useImage.ts  useScreen.ts  useSize.ts  useStockfish.ts  useWebsocket.ts
lib/: api.ts  definitions.ts  drawing.ts  field.ts  images.ts  moves.ts  palette.ts  pieces.ts  render.ts  stockfish.ts  utils.ts  websocket.ts
(+6 files in other folders)
